--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyBefcG1voH2z6HOd2HX4sQ0eUefgffvhuE</string>
+	<string></string>
 	<key>GCM_SENDER_ID</key>
 	<string>176529937128</string>
 	<key>PLIST_VERSION</key>
